syntax = "proto3";

option java_multiple_files = true;

package com.coin;

service CoinService {
  rpc GetCoinTradePrice (GetCoinTradePriceRequest) returns (GetCoinTradePriceResponse);
}

message GetCoinTradePriceRequest {
  string codes = 1;
  string names = 2;
}

message GetCoinTradePriceResponse {
  string codes = 1;
  string names = 2;
  string tradePrices = 3;
  string changeRates = 4;
  string totalTradePrices = 5;
}